<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="stProductPos" Id="{d21080ba-1f3a-418b-9851-99c84d40e210}">
    <Declaration><![CDATA[TYPE stProductPos :
STRUCT
	X		:	REAL;
	y		:	REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>