<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{087ae917-e658-4b95-a6c9-120fcf56fd22}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	ProductPresenceSensor		: BOOL;
	PostCodeSensor01			: BOOL; 
	PostCodeSensor02			: BOOL;
	PostCodeSensor03			: BOOL;
	PostCodeSensor04			: BOOL;
	InvalidPostCodesSensor		: BOOL;
	StartButton	:	BOOL;
	StopButton	:	BOOL;
	
	ConveyorMotor :	BOOL;
	SwingArm01	  : BOOL;
	SwingArm02	  : BOOL;
	SwingArm03	  : BOOL;
	SwingArm04	  : BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>